--- a/index.html
+++ b/index.html
@@ -7,11 +7,47 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
-
-
+        <img src="Photo/Myphoto.jpeg" alt="SHARJEEL " height="250" width=" 250">
+        <h1>SHARJEEL HAIDER </h1>
+        <h2>Software-Developer </h2>
+        <p>
+            Analytical skills to evaluate software and make improvements.
+            Compile bugs into reports and recommend solutions.
+            Effective professional communication skills.
+            Detail oriented approach to software design.
+            Creative minded professional.
+        </p>
 
     </header>
+    <main>
+        <section>
+
+            <h2>Education</h2>
+            <hr>
+            <h3>Gift University GRW, 2019 to 2021</h3>
+            <h4>AD-Computer science</h4>
+
+        </section>
+
+        <section>
+            <h2>Software-Developer</h2>
+            <hr>
+            <ul>
+                <li>Web-Developer </li>
+                <li>database- controller</li>
+                <li>video-editor</li>
+            </ul>
+        </section>
+
+    </main>
+    <footer>
+        <h2>Let's keep in Touch</h2>
+        <div>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+
+    </footer>
 
 </body>
 </html>
