--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <hr>
             <ul>
                 <li>Web-Developer </li>
-                <li>database- controller</li>
-                <li>video-editor</li>
+                <li>Database- controller</li>
+                <li>Video-editor</li>
             </ul>
         </section>
 
@@ -43,10 +43,10 @@
     <footer>
         <h2>Let's keep in Touch</h2>
         <div>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="https://web.facebook.com/azanishbutt0019">facebook</a>
+            <a href="https://mail.google.com/mail/u/0/#inbox">Email</a>
         </div>
-
+        <h3>SHARJEEL | 2020</h3>
     </footer>
 
 </body>
